--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-This file was created by IntelliJ IDEA 12.1.6 for binding GitHub repository
+* Homeworks for Advanced algorithms *
+- DFS (depth-first search)
+- Union-find problem
+- Euler trail
+- Binomial heap
+- Combinatorial generating
+- Graph isomorphism
