--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-* Homeworks for Advanced algorithms *
-- DFS (depth-first search)
-- Union-find problem
-- Euler trail
-- Binomial heap
-- Combinatorial generating
-- Graph isomorphism
+# Homeworks for Advanced algorithms
+* DFS (depth-first search)
+* Union-find problem
+* Euler trail
+* Binomial heap
+* Combinatorial generating
+* Graph isomorphism
